feature: add daily game (#62)
* feature: add daily game

* fix: hide correct_option from daily game response until answer submitted
